2006-09-01  Brian Matherly  <brian@gramps-project.org>
    * src/plugins/Calendar.py: fix filter typo
    * src/plugins/WritePkg.py: don't set uid on Windows

2006-09-01  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_DbUtils.py: Use normal addition: this updates
	reference_map properly.
	* src/plugins/StatisticsChart.py: Remove cause.
	* src/GrampsDb/_WriteXML.py (write_object): Escape path of the files;
	(fix): remove control characters.

2006-08-29  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (remove_person,_do_remove_object):
	Properly delete objects;
	(get_del_func): Add method to find deleting function for an object.
	* src/plugins/Check.py (cleanup_empty_families): Report gramps id.
	* src/RelLib/_SourceRef.py (SourceRef.__init__): Pass source.
	* src/RelLib/_ChildRef.py (ChildRef.__init__): Pass source.
	* src/RelLib/_EventRef.py (EventRef.__init__): Pass source.
	* src/RelLib/_PersonRef.py (PersonRef.__init__): Pass source.
	* src/RelLib/_RepoRef.py (RepoRef.__init__): Pass source.
	* src/glade/gramps.glade: Add privacy controls to all editors.
	* src/Editors/_EditSource.py: Add privacy control.
	* src/Editors/_EditSourceRef.py: Add privacy control.
	* src/Editors/_EditPlace.py: Add privacy control.
	* src/Editors/_EditMedia.py: Add privacy control.
	* src/Editors/_EditMediaRef.py: Add privacy control.
	* src/Editors/_EditRepository.py: Add privacy control.
	* src/Editors/_EditRepoRef.py: Add privacy control.

2006-08-29  Alex Roitman  <shura@phy.ucsf.edu>
	* NEWS: Update.

2006-08-29  Zdenek Hatas  <zdenek.hatas@gmail.com>
	* src/plugins/rel_cs.py: Add relationship calculator.
	* src/plugins/Makefile.am (pkgdata_PYTHON): Ship new file.

2006-08-28  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_Name.py: pyflakes fixes
	* src/Editors/_EditName.py: pyflakes fixes
	* src/DisplayTabs/_BackRefModel.py: pyflakes fixes
	* src/DisplayTabs/_GalleryTab.py: pyflakes fixes
